--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,17 @@
         <artifactId>selenium-java</artifactId>
         <version>3.141.59</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.0.0-beta3</version>
+        <scope>test</scope>
+    </dependency>
+
+
+
 </dependencies>
 
 
